docs: add JLama build and install instructions [mkpro]
Add instructions for cloning and building the JLama project from https://github.com/redbus-labs/Jlama as an optional prerequisite in README.md. Also update documentation for supported Jlama models, CLI commands, and current version references.